feat(DATA-1742) : migrate chouette to java 17 / Wildfly 26